[tool.poetry]
name = "fastapithreads"
version = "0.2.0"
description = ""
authors = ["stcdbe <samthomascolddeadblueeyes@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
pydantic-settings = "^2.1.0"
uvicorn = "^0.27.0.post1"
email-validator = "^2.1.0.post1"
pyjwt = "^2.8.0"
bcrypt = "^4.1.2"
gunicorn = "^21.2.0"
python-multipart = "^0.0.6"
motor = "^3.4.0"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.4"
httpx = "^0.26.0"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
